test/arrays/deitz/part6/test_bounds1.good
test_bounds1.chpl:3: error: halt reached - indexing out of bounds in dimension 1: [6] but array bounds are 1..5
