test/arrays/deitz/part6/test_bounds1.chpl
var A : [1..5, 1..5] int;

writeln(A(6, 1));
